# cpp_snake

./: CMakeLists.txt  README.md
build-linux/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  install_manifest.txt  snake  snake-1.0.0-Linux.deb  snake-1.0.0-Linux.rpm
build-linux/_CPack_Packages/Linux/DEB/snake-1.0.0-Linux/: control  md5sums
build-linux/_CPack_Packages/Linux/RPM/: rpmbuildsnake.err  rpmbuildsnake.out
build-linux/_CPack_Packages/Linux/RPM/SPECS/: snake.spec
src/: main.cpp  snake
